# Text-Summarizer

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_transformation.ipynb  3_mode_trainnig.ipynb  4_model_evaluation.ipynb  reasearch.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: prediction_pipeline.py  stage_1_data_ingestion.py  stage_2_data_transformation.py  stage_3_model_training.py  stage_4_model_evaluation.py
src/textSummarizer/utils/: common.py
