[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.19",
    "datasets>=4.0.0",
    "ensure>=1.0.4",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "mypy-boto3>=1.40.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "py7zr>=1.0.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.55.4",
    "uvicorn>=0.35.0",
]
