[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "boto3>=1.40.19",
    "datasets>=4.0.0",
    "ensure>=1.0.4",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "hf-xet>=1.1.9",
    "huggingface-hub[hf-xet]>=0.34.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "mypy-boto3>=1.40.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "py7zr>=1.0.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "uvicorn>=0.35.0",
]
